--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
       <div class="col-md-2">
-        <div class="well">
+        <div class="well well-sm">
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
