bg color adjust and well add

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
           <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
-        <div class="panel">
+        <div class="panel well well-sm">
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-5 well well-lg">
         <div id="bar"></div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-5 well well-lg">
         <div id="gauge"></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 well well-lg">
         <div id="bubble"></div>
       </div>
     </div>
