remove chart well-lg tags

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5 well well-lg">
+      <div class="col-md-5 well">
         <div id="bar"></div>
       </div>
-      <div class="col-md-5 well well-lg">
+      <div class="col-md-5 well">
         <div id="gauge"></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12 well well-lg">
+      <div class="col-md-12 well">
         <div id="bubble"></div>
       </div>
     </div>
