adjust well class tags

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5 well">
-        <div id="bar"></div>
+      <div class="col-md-5">
+        <div id="bar" class="well"></div>
       </div>
-      <div class="col-md-5 well">
-        <div id="gauge"></div>
+      <div class="col-md-5">
+        <div id="gauge" class="well"></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12 well">
-        <div id="bubble"></div>
+      <div class="col-md-12">
+        <div id="bubble" class="well"></div>
       </div>
     </div>
   </div>
