remove well tag from bubble chart

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div id="bubble" class="well"></div>
+        <div id="bubble"></div>
       </div>
     </div>
   </div>
