--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 well">
         <div id="bubble"></div>
       </div>
     </div>
