center chart elements in html

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar" class="well"></div>
+        <div id="bar" class="well chart"></div>
       </div>
       <div class="col-md-5">
-        <div id="gauge" class="well"></div>
+        <div id="gauge" class="well chart"></div>
       </div>
     </div>
     <div class="row">
