--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar" class="well chart"></div>
+        <div id="bar" class="well well-bar chart"></div>
       </div>
       <div class="col-md-5">
-        <div id="gauge" class="well chart"></div>
+        <div id="gauge" class="well well-gauge chart"></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12 well">
+      <div class="col-md-12 well well-bubble">
         <div id="bubble"></div>
       </div>
     </div>
