--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 col-sm-12 jumbotron text-center">
+      <div class="col-md-12 col-sm-12 col-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-2 col-sm-2 order-1">
+      <div class="col-md-2 col-sm-2 col-2 order-1">
         <div class="well well-sm">
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
@@ -33,15 +33,15 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5 col-sm-12 order-md-2 order-sm-3">
+      <div class="col-md-5 col-sm-12 col-12 order-md-2 order-sm-3">
         <div id="bar" class="well well-bar chart"></div>
       </div>
-      <div class="col-md-5 col-sm-10 order-md-3 order-sm-2">
+      <div class="col-md-5 col-sm-10 col-10 order-md-3 order-sm-2">
         <div id="gauge" class="well well-gauge chart"></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12 col-sm-12 well well-bubble">
+      <div class="col-md-12 col-sm-12 col-12 well well-bubble">
         <div id="bubble"></div>
       </div>
     </div>
