--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-2 col-sm-2 col-xs-2">
+      <div class="col-md-2 col-xs-2">
         <div class="well well-sm">
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
@@ -33,11 +33,11 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5 col-xs-12 col-xs-push-12 col-md-push-0">
-        <div id="bar" class="well well-bar chart"></div>
-      </div>
-      <div class="col-md-5 col-xs-10 col-xs-pull-12 col-md-pull-0">
+      <div class="col-md-5 col-xs-10 col-md-push-5">
         <div id="gauge" class="well well-gauge chart"></div>
+      </div>
+      <div class="col-md-5 col-xs-12 col-md-pull-5">
+        <div id="bar" class="well well-bar chart"></div>
       </div>
     </div>
     <div class="row">
