--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 col-sm-12 col-xs-12 jumbotron text-center">
+      <div class="col-md-12 col-xs-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-2 col-xs-2">
+      <div class="col-md-2 col-xs-4">
         <div class="well well-sm">
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
@@ -33,7 +33,7 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5 col-xs-10 col-md-push-5">
+      <div class="col-md-5 col-xs-8 col-md-push-5">
         <div id="gauge" class="well well-gauge chart"></div>
       </div>
       <div class="col-md-5 col-xs-12 col-md-pull-5">
